# rofi-file-browser-extended

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PKGBUILD  cmake_install.cmake  install_manifest.txt
